Fix overflow

--- a/mockups/html/v2/css/collection-list.css
+++ b/mockups/html/v2/css/collection-list.css
@@ -3,7 +3,7 @@
 -------------------------------------------------------------------------- */
 
 .collection-list-wrapper {
-    overflow:           scroll;
+    overflow-y:         scroll;
     position:           absolute;
     top:                0;
     bottom:             0;
